--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html lang='en'>
+<head>
+<meta charset='utf-8'>
+<title>ConceptualEyes: Concept relationship mapping made easy</title>
+<link rel='stylesheet' href='style.css'>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js'></script>
+<script src='https://cdn.firebase.com/js/client/2.2.7/firebase.js'></script>
+</head>
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-<script src="map.js"></script>
+<div id='header'>
+<img src='logo.png' title='ConceptualEyes'>
+    <p>Enter your concepts and relationships below:</p>
+    <form>
+        <label for='source_field'>Concept 1</label>
+        <input type='text' id='source_field'  name='Concept 1' placeholder='Enter a concept' required>
+        <label for='relationship_field'>Relationship</label>
+        <input type='text' id='relationship_field' name='Relationship' placeholder='Describe the relationship'>
+        <label for='target_field'>Concept 2</label>
+        <input type='text' id='target_field' name='Concept 2' placeholder='Enter the related concept' required>
+        <input type='submit' id='add_rel_btn'></input>    
+    </form>
+</div>
+<script src='map.js'></script>
 </body>
+</html>
